Align fixes in submenu icon, layer item icons, layer item circle, base maps menu glitch

--- a/app/styles/components/button.scss
+++ b/app/styles/components/button.scss
@@ -63,7 +63,7 @@
 
 .expandButton {
   outline: none;
-  padding: 5px;
+  padding: 5px 6px;
 
   svg {
     fill: $color-31 !important;
