--- a/app/styles/components/shared/expand-item.scss
+++ b/app/styles/components/shared/expand-item.scss
@@ -21,7 +21,7 @@
 
     &.secondIcon{
       &::after {
-        right: 44px;
+        right: 50px;
         margin-top: -25px;
       }
     }
