--- a/app/styles/components/submenu.scss
+++ b/app/styles/components/submenu.scss
@@ -26,6 +26,7 @@
         display: flex;
         align-items: center;
         cursor: pointer;
+        margin-top: -7px;
 
         .title {
           color: $color-fade-blue;
