--- a/app/styles/rightControlPanel/basemap-panel.scss
+++ b/app/styles/rightControlPanel/basemap-panel.scss
@@ -1,7 +1,7 @@
 @import '../settings';
 
 .basemapsPanel {
-  margin-bottom: 20px;
+  padding-bottom: 20px;
   font-size: $font-size-xs-small;
 
   @media #{mq-tablet} {
